<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm_64"
            android:title="@string/alarm" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/book"
            android:title="@string/file_manager" />
        <item
            android:id="@+id/nav_flashcard"
            android:icon="@drawable/flashcard"
            android:title="@string/flashcards" />
        <item
            android:id="@+id/nav_blog"
            android:title="@string/glance_learning_blog"
            android:icon="@drawable/blogging"/>

        <item
            android:id="@+id/nav_study_chat"
            android:icon="@drawable/network_96"
            android:title="@string/study_chat" />
    </group>
</menu>