<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Alarm">

        <Preference
            app:key="ringtone"
            app:title="Notification Sound"
            app:summary="Select tone for Reminder and Schedule notifications"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="backupAlarm"
            app:title="Backup Alarms"
            android:summaryOn="Alarms Database will be BackedUp Automatically"
            android:summaryOff="Alarm Database Backup disabled"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>